--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Boilerplate</title>
+    <title>cytoscape.next</title>
+    <style>
+      #root {
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
+
     <div id="root"></div>
-    <!-- This script adds the Roboto font to our project. For more detail go to this site:  http://www.google.com/fonts#UsePlace:use/Collection:Roboto:400,300,500 -->
+
+    <!-- Web Font loading -->
     <script>
       var WebFontConfig = {
         google: { families: [ 'Roboto:400,300,500:latin' ] }
@@ -21,6 +28,7 @@
         s.parentNode.insertBefore(wf, s);
       })();
     </script>
+
     <script src="/vendor.bundle.js"></script>
     <script src="/bundle.js"></script>
   </body>
