Event listener added.

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <style>
       #root {
         width: 100%;
+        height: 100%;
       }
     </style>
   </head>
@@ -16,7 +17,7 @@
     <!-- Web Font loading -->
     <script>
       var WebFontConfig = {
-        google: { families: [ 'Roboto:400,300,500:latin' ] }
+        google: { families: [ 'Roboto:100,200,300,400,500:latin' ] }
       };
       (function() {
         var wf = document.createElement('script');
